{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 47,
  "lineage": "2eec343b-e8e9-6b73-038c-8b212953cffa",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "TestNIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkInterfaces/Util_NIC",
            "internal_domain_name_suffix": "lwmpz0revxbexndtuupob54gcc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "util_stop",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/publicIPAddresses/Util_Publicip",
                "subnet_id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/virtualNetworks/Util_stop_Vnet/subnets/Util_stop_SN"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-2C-A8-66",
            "name": "Util_NIC",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "util_stop",
            "virtual_machine_id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Compute/virtualMachines/Utilstoptest"
          },
          "dependencies": [
            "azurerm_public_ip.testuspi",
            "azurerm_resource_group.TestRG",
            "azurerm_subnet.TestSN",
            "azurerm_virtual_network.TestVN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "TestNICAssosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkInterfaces/Util_NIC|/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkSecurityGroups/Util_stop_NSG",
            "network_interface_id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkInterfaces/Util_NIC",
            "network_security_group_id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkSecurityGroups/Util_stop_NSG"
          },
          "dependencies": [
            "azurerm_network_interface.TestNIC",
            "azurerm_network_security_group.TestNSG",
            "azurerm_public_ip.testuspi",
            "azurerm_resource_group.TestRG",
            "azurerm_subnet.TestSN",
            "azurerm_virtual_network.TestVN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "TestNSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkSecurityGroups/Util_stop_NSG",
            "location": "eastus",
            "name": "Util_stop_NSG",
            "resource_group_name": "util_stop",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3007",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-application_port-range-3007",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65000",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow-Outbound-65000",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65001",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow-Outbound-65001",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65500",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow-Outbound-65500",
                "priority": 202,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.TestRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inbound_rule_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkSecurityGroups/Util_stop_NSG/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "Util_stop_NSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "util_stop",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.TestNSG",
            "azurerm_resource_group.TestRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inbound_rule_3007",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3007",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkSecurityGroups/Util_stop_NSG/securityRules/Allow-application_port-range-3007",
            "name": "Allow-application_port-range-3007",
            "network_security_group_name": "Util_stop_NSG",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "util_stop",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.TestNSG",
            "azurerm_resource_group.TestRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inbound_rule_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkSecurityGroups/Util_stop_NSG/securityRules/Allow-HTTPS",
            "name": "Allow-HTTPS",
            "network_security_group_name": "Util_stop_NSG",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "util_stop",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.TestNSG",
            "azurerm_resource_group.TestRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inbound_rule_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkSecurityGroups/Util_stop_NSG/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "Util_stop_NSG",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "util_stop",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.TestNSG",
            "azurerm_resource_group.TestRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outbound_rule_65000",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "65000",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkSecurityGroups/Util_stop_NSG/securityRules/Allow-Outbound-65000",
            "name": "Allow-Outbound-65000",
            "network_security_group_name": "Util_stop_NSG",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "util_stop",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.TestNSG",
            "azurerm_resource_group.TestRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outbound_rule_65001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "65001",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkSecurityGroups/Util_stop_NSG/securityRules/Allow-Outbound-65001",
            "name": "Allow-Outbound-65001",
            "network_security_group_name": "Util_stop_NSG",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "util_stop",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.TestNSG",
            "azurerm_resource_group.TestRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outbound_rule_65500",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "65500",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/networkSecurityGroups/Util_stop_NSG/securityRules/Allow-Outbound-65500",
            "name": "Allow-Outbound-65500",
            "network_security_group_name": "Util_stop_NSG",
            "priority": 202,
            "protocol": "Tcp",
            "resource_group_name": "util_stop",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.TestNSG",
            "azurerm_resource_group.TestRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "testuspi",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/publicIPAddresses/Util_Publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.25.82.182",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Util_Publicip",
            "resource_group_name": "util_stop",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.TestRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "TestSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/virtualNetworks/Util_stop_Vnet/subnets/Util_stop_SN",
            "name": "Util_stop_SN",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "util_stop",
            "virtual_network_name": "Util_stop_Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.TestRG",
            "azurerm_virtual_network.TestVN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "TestVN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "eafc985d-ad24-4bc2-b473-a51ee0ffc612",
            "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/virtualNetworks/Util_stop_Vnet",
            "location": "eastus",
            "name": "Util_stop_Vnet",
            "resource_group_name": "util_stop",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/55726546-d6c8-4d5f-95ca-2ad588f468ab/resourceGroups/util_stop/providers/Microsoft.Network/virtualNetworks/Util_stop_Vnet/subnets/Util_stop_SN",
                "name": "Util_stop_SN"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.TestRG"
          ]
        }
      ]
    }
  ]
}